--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+crossterm = "0.27.0"
+html_parser = "0.7.0"
+ratatui = "0.27.0"
+thiserror = "1.0.61"
